@@ -18,5 +18,6 @@ quote = "1.0"
 schemars = "0.8.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 serde_tokenstream = "0.1.6"
 syn = "1.0"
