@@ -17,6 +17,7 @@ anyhow = "1.0"
 openapiv3 = "1.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 clap = { version = "4.0.32", features = ["derive"] }
 
 [dev-dependencies]
